--- a/package.json
+++ b/package.json
@@ -1,38 +1,45 @@
 {
-  "name": "frontend-skeleton",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "format": "biome format --write",
-    "check": "biome check --write",
-    "sb": "storybook dev -p 6006",
-    "build-sb": "storybook build"
-  },
-  "dependencies": {
-    "next": "15.1.7",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "sass": "^1.84.0"
-  },
-  "devDependencies": {
-    "@biomejs/biome": "1.9.4",
-    "@chromatic-com/storybook": "^3.2.4",
-    "@storybook/addon-essentials": "^8.5.5",
-    "@storybook/addon-interactions": "^8.5.5",
-    "@storybook/addon-onboarding": "^8.5.5",
-    "@storybook/blocks": "^8.5.5",
-    "@storybook/nextjs": "^8.5.5",
-    "@storybook/react": "^8.5.5",
-    "@storybook/test": "^8.5.5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "postcss": "^8",
-    "storybook": "^8.5.5",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-  }
+	"name": "frontend-skeleton",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev --turbopack",
+		"build": "next build",
+		"start": "next start",
+		"format": "biome format --write",
+		"check": "biome check --write",
+		"sb": "storybook dev -p 6006",
+		"build-sb": "storybook build"
+	},
+	"dependencies": {
+		"next": "15.1.7",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0",
+		"sass": "^1.84.0"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "1.9.4",
+		"@chromatic-com/storybook": "^3.2.4",
+		"@storybook/addon-essentials": "^8.5.5",
+		"@storybook/addon-interactions": "^8.5.5",
+		"@storybook/addon-onboarding": "^8.5.5",
+		"@storybook/blocks": "^8.5.5",
+		"@storybook/nextjs": "^8.5.5",
+		"@storybook/react": "^8.5.5",
+		"@storybook/test": "^8.5.5",
+		"@types/node": "^20",
+		"@types/react": "^19",
+		"@types/react-dom": "^19",
+		"msw": "^2.7.0",
+		"msw-storybook-addon": "^2.0.4",
+		"postcss": "^8",
+		"storybook": "^8.5.5",
+		"tailwindcss": "^3.4.1",
+		"typescript": "^5"
+	},
+	"msw": {
+		"workerDirectory": [
+			"public"
+		]
+	}
 }
