--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"@types/node": "^20",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
+		"miragejs": "^0.1.48",
 		"postcss": "^8",
 		"storybook": "^8.5.5",
 		"tailwindcss": "^3.4.1",
