--- a/package.json
+++ b/package.json
@@ -1,50 +1,51 @@
 {
-  "name": "frontend-skeleton",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "format": "biome format --write",
-    "check": "biome check --write",
-    "sb": "storybook dev -p 6006",
-    "build-sb": "storybook build",
-    "test": "jest",
-    "test:watch": "jest --watch"
-  },
-  "dependencies": {
-    "next": "15.1.7",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "sass": "^1.84.0"
-  },
-  "devDependencies": {
-    "@biomejs/biome": "1.9.4",
-    "@chromatic-com/storybook": "^3.2.4",
-    "@storybook/addon-essentials": "^8.5.5",
-    "@storybook/addon-interactions": "^8.5.5",
-    "@storybook/addon-onboarding": "^8.5.5",
-    "@storybook/blocks": "^8.5.5",
-    "@storybook/nextjs": "^8.5.5",
-    "@storybook/react": "^8.5.5",
-    "@storybook/test": "^8.5.5",
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.2.0",
-    "@types/jest": "^29.5.14",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "husky": "^9.1.7",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "miragejs": "^0.1.48",
-    "postcss": "^8",
-    "storybook": "^8.5.5",
-    "tailwindcss": "^3.4.1",
-    "ts-jest": "^29.2.5",
-    "ts-node": "^10.9.2",
-    "typescript": "^5"
-  }
+	"name": "frontend-skeleton",
+	"version": "0.1.1",
+	"private": true,
+	"scripts": {
+		"dev": "next dev --turbopack",
+		"build": "next build",
+		"start": "next start",
+		"format": "biome format --write",
+		"check": "biome check --write",
+		"sb": "storybook dev -p 6006",
+		"build-sb": "storybook build",
+		"test": "jest",
+		"test:watch": "jest --watch",
+		"prepare": "husky"
+	},
+	"dependencies": {
+		"next": "15.1.7",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0",
+		"sass": "^1.84.0"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "1.9.4",
+		"@chromatic-com/storybook": "^3.2.4",
+		"@storybook/addon-essentials": "^8.5.5",
+		"@storybook/addon-interactions": "^8.5.5",
+		"@storybook/addon-onboarding": "^8.5.5",
+		"@storybook/blocks": "^8.5.5",
+		"@storybook/nextjs": "^8.5.5",
+		"@storybook/react": "^8.5.5",
+		"@storybook/test": "^8.5.5",
+		"@testing-library/dom": "^10.4.0",
+		"@testing-library/jest-dom": "^6.6.3",
+		"@testing-library/react": "^16.2.0",
+		"@types/jest": "^29.5.14",
+		"@types/node": "^20",
+		"@types/react": "^19",
+		"@types/react-dom": "^19",
+		"husky": "^9.1.7",
+		"jest": "^29.7.0",
+		"jest-environment-jsdom": "^29.7.0",
+		"miragejs": "^0.1.48",
+		"postcss": "^8",
+		"storybook": "^8.5.5",
+		"tailwindcss": "^3.4.1",
+		"ts-jest": "^29.2.5",
+		"ts-node": "^10.9.2",
+		"typescript": "^5"
+	}
 }
